--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -2,7 +2,7 @@
     <div class="swiper-contain">
         <swiper-container class="mySwiper" rewind="true" autoplay-delay="3000" effect="cards" grab-cursor="true">
             <swiper-slide *ngFor="let movie of movies">
-                <div [ngStyle]="{'background-image': 'linear-gradient(to left, rgba(23, 11, 0, 0.882), rgba(44, 20, 0, 0),rgba(44, 20, 0, 0.718)),url(' + movie.posterURL + ')'}" class="img-container">
+                <div (click)="NavigateTo(movie.id)" [ngStyle]="{'background-image': 'linear-gradient(to left, rgba(23, 11, 0, 0.882), rgba(44, 20, 0, 0),rgba(44, 20, 0, 0.718)),url(' + movie.posterURL + ')'}" class="img-container">
                 </div>
             </swiper-slide>
         </swiper-container>
