--- a/src/app/components/homesection/homesection.component.html
+++ b/src/app/components/homesection/homesection.component.html
@@ -3,7 +3,7 @@
         <h2>Drama Movies</h2>
         <div class="gradient-container">
             <swiper-container navigation="true" class="mySwiper" space-between="30" slides-per-view="4">
-                <swiper-slide  *ngFor="let movie of dramaMovies"><img [src]="movie.posterURL" />
+                <swiper-slide (click)="NavigateTo(movie.id)"  *ngFor="let movie of dramaMovies"><img [src]="movie.posterURL" />
                     <h5>{{movie.title}}</h5>
                 </swiper-slide>
             </swiper-container>
@@ -16,7 +16,7 @@
         <h2>Comedy Movies</h2>
         <div class="gradient-container">
             <swiper-container navigation="true" class="mySwiper" space-between="30" slides-per-view="4">
-                <swiper-slide  *ngFor="let movie of comedyMovies"><img [src]="movie.posterURL" />
+                <swiper-slide (click)="NavigateTo(movie.id)"  *ngFor="let movie of comedyMovies"><img [src]="movie.posterURL" />
                     <h5>{{movie.title}}</h5>
                 </swiper-slide>
             </swiper-container>
