validation, exception, createresponse

--- a/src/app/components/createactor/createactor.component.css
+++ b/src/app/components/createactor/createactor.component.css
@@ -59,3 +59,8 @@ button{
 input.ng-invalid.ng-touched{
     border-bottom: red solid 1px;
 }
+h2{
+    color:black;
+    background-color: red;
+    font-size: 50px;
+}
