--- a/src/app/components/createactor/createactor.component.html
+++ b/src/app/components/createactor/createactor.component.html
@@ -1,9 +1,10 @@
+
 <div class="creation-background">
-    <form class="form-container" [formGroup]="createActorForm" (ngSubmit)="CreateActor()">
+    <form class="form-container" [formGroup]="createActorForm" (ngSubmit)="CreateActor()" >
         <div> <label>Name:</label><input type="text" formControlName="name"/></div>
         <div> <label>Age:</label><input type="number" formControlName="age" /></div>
         <div> <label>Bio:</label><input type="text" formControlName="bio" /></div>
-        <div class="file"> <label>Image:</label><input class="file" type="file" formControlName="posterURL"/></div>
+        <div class="file"> <label>Image:</label><input class="file" type="file" (change)="OnImageChange($event)"/></div>
         <div class="button"> <button type="submit">Create Actor</button></div>
     </form>
 </div>
