--- a/src/app/components/allmovies/allmovies.component.css
+++ b/src/app/components/allmovies/allmovies.component.css
@@ -12,25 +12,59 @@
 }
 .movies-container{
     width: 70%;
-    background-color: red;
     height:100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: start;
+    gap:20px;
 }
 .search{
-    background-color: blue;
-    height:40px;
-    width: 50%;
+    min-height:40px;
+    width: 80%;
+    color:white;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+.search label{
+    margin-left: 5px;
+}
+.search p-radioButton{
+    margin-left: 20px;
 }
 .movies{
-    height:100%;
-    background-color: green;
+    display: flex;
+    flex-wrap: wrap;
     width:100%;
+    gap:20px;
+    justify-content: center;
+}
+.movie-card{
+    width: 25%;
+    min-height: 90px;
+    display:flex;
+    flex-direction: column;
+}
+.movie-card img{
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+    border-radius: 20px;
+}
+.movie-card h4{
+    color:white;
 }
 .paginator{
     height:40px;
     width: 70%;
-    background-color: purple;
 }
+
+.p-inputtext{
+    background-color: rgba(255, 255, 255, 0.3);
+    backdrop-filter: blur(3px);
+    height: 30px;
+    color: white;
+}
+
+
