--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -5,11 +5,11 @@
         <a href="#">Home</a>
       </li>
       <li>
-        <a href="#">Movies</a>
+        <a (click)="NavigateTo('/movies')" >Movies</a>
       </li>
       <a style="margin-top: 0px; padding-bottom: 0px;"><img style="width:100px; margin-left:20px; margin-right:20px;" src="./assets/aflamLogoTransparent.png"/></a>
       <li>
-        <a href="#">Actors</a>
+        <a (click)="NavigateTo('/actors')" >Actors</a>
       </li>
       <li>
         <a href="#">Login</a>
