--- a/src/app/components/moviedetails/moviedetails.component.html
+++ b/src/app/components/moviedetails/moviedetails.component.html
@@ -1,3 +1,5 @@
+<p-toast></p-toast>
+<p-confirmDialog></p-confirmDialog>
 <div class="movie-container">
     <div class="firstcontainer">
         <img class="movieimage" [src]="movie.posterURL" />
@@ -8,17 +10,21 @@
             </div>
             <p>{{movie.description}}</p>
         </div>
+        <div class="buttons"><button (click)="NavigateTo(movie.id)" class="edit-button">Edit</button><button (click)="confirm2($event)" class="delete-button">Delete</button>
+        </div>
     </div>
     <div class="movie-actors">
         <div class="actors-container">
             <h2>Series Actors</h2>
             <div class="gradient-container">
                 <swiper-container navigation="true" class="mySwiper" space-between="30" slides-per-view="4">
-                    <swiper-slide *ngFor="let actor of movieActors"><img class="swiperslideimage" [src]="actor.posterURL" />
+                    <swiper-slide *ngFor="let actor of movieActors"><img class="swiperslideimage"
+                            [src]="actor.posterURL" />
                         <h5>{{actor.name}}</h5>
                     </swiper-slide>
                 </swiper-container>
                 <div class="gradient"></div>
             </div>
+        </div>
     </div>
-</div>
+    
