--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import "primeng/resources/themes/lara-light-blue/theme.css";
 @import "primeng/resources/primeng.css";
+@import "primeicons/primeicons.css";
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
@@ -24,4 +25,25 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .p-dialog-footer{
     padding:10px;
 
+}
+.p-multiselect{
+    padding:5px 20px;
+    color:black;
+    padding-right: 1px;
+}
+.p-multiselect-panel{
+    padding:2px;
+}
+.p-multiselect-item{
+    margin-bottom:3px;
+    margin-left: 2px;
+}
+.p-multiselect-filter-icon{
+    display: none;
+}
+.p-checkbox .p-checkbox-box{
+    margin-right: 3px;
+}
+.p-multiselect-panel{
+    padding:10px;
 }
