--- a/src/app/components/allactors/allactors.component.html
+++ b/src/app/components/allactors/allactors.component.html
@@ -2,9 +2,10 @@
     <div class="movies-container">
         <div class="search">
             <input type="text" (input)="onSearchChange()" pInputText [(ngModel)]="searchValue" />
+            <button (click)="NavigateToLink('/create/actor')" class="create-button">Create Actor</button>
         </div>
         <div class="movies">
-            <div *ngFor="let actor of actors" class="movie-card">
+            <div (click)="NavigateTo(actor.id)" *ngFor="let actor of actors" class="movie-card">
                 <img [src]="actor.posterURL" />
                 <h4>{{actor.name}}</h4>
             </div>
