--- a/src/app/components/allmovies/allmovies.component.css
+++ b/src/app/components/allmovies/allmovies.component.css
@@ -67,5 +67,19 @@
     height: 30px;
     color: white;
 }
+.create-button{
+    height:25px;
+    background-color: rgb(198,66,2);
+    border-radius: 10px;
+    border:none;
+    color:white;
+    cursor:pointer;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-left: 20px;
+}
+.movie-card img:hover{
+    border:solid rgb(253,108,35) 2px;
+}
 
 
