--- a/src/app/components/editmovie/editmovie.component.css
+++ b/src/app/components/editmovie/editmovie.component.css
@@ -52,6 +52,7 @@ input[type="file"]{
     width: 100%;
     display: flex;
     justify-content: center;
+    gap:10px;
 }
 button{
     padding:5px;
