--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -12,7 +12,7 @@
         <a (click)="NavigateTo('/actors')" >Actors</a>
       </li>
       <li>
-        <a href="#">Login</a>
+        <a (click)="UserNavigation()">{{user}}</a>
       </li>
       
     </ul>
