--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,10 +1,10 @@
 <div class="form-container">
     <form (submit)="Login()" [formGroup]="loginForm">
         <h2>LOGIN</h2>
-        <div class="input-container"><label>Email:</label><input type="email" formControlName="Email" /></div>
-        <div class="input-container"><label>Password:</label><input type="password" formControlName="Password" /></div>
+        <div class="input-container"><label>Email:</label><input type="email" formControlName="Email" /><span style="color:red;" *ngIf="Email&&Email.invalid&&Email.touched">Email field not valid</span></div>
+        <div class="input-container"><label>Password:</label><input type="password" formControlName="Password" /><span style="color:red;" *ngIf="Password&&Password.invalid&&Password.touched">Password field not valid</span></div>
         <p style="color:red; margin: -20px;" *ngIf="wrongCred==true">Email or password is wrong!</p>
-        <button type="submit">Login</button>
+        <button [disabled]="loginForm.invalid" type="submit">Login</button>
         <p>No account? <span (click)="NavigateToRegister()" >Register</span></p>
     </form>
 </div>
